Migrate all 'hint' shortcodes to newer markdown alerts syntax

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -185,120 +185,107 @@ Let's build some intuition by looking into some examples of Fourier spectra.
 ## Series with finite spectra
 
 
-{{< hint info >}}
-
-**Simple Waveform**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Simple Waveform**
+> 
+> {{< katex display >}}
 u = \sin (5x)
 {{< /katex >}}
-
-By inspection, 
-
-{{< katex display >}}
+> 
+> By inspection, 
+> 
+> {{< katex display >}}
 \sin (5x) = \frac{1}{2i} \left( e^{i 5x} - e ^{-i 5 x} \right)
 {{< /katex >}}
-
-That was easy, that's the whole series. There are only two Fourier coefficients
-
-{{< katex display >}}
+> 
+> That was easy, that's the whole series. There are only two Fourier coefficients
+> 
+> {{< katex display >}}
 c_5 = - \frac{i}{2} \qquad c_{-5} = \frac{i}{2}
 {{< /katex >}}
 
-{{< /hint >}}
-
-
-{{< hint info >}}
-
-**Beat wave**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Beat wave**
+> 
+> {{< katex display >}}
 u = \cos (6x) \cos (x)
 {{< /katex >}}
-
-Expanding each of the cosines as complex exponentials
-
-{{< katex display >}}
+> 
+> Expanding each of the cosines as complex exponentials
+> 
+> {{< katex display >}}
 u = \frac{1}{4} \left( e^{i 6 x} + e^{- i 6 x} \right) (e^{ix} + e^{-ix})
 {{< /katex >}}
-{{< katex display >}}
+> {{< katex display >}}
 = \frac{1}{4} \left( e^{i 7 x} + e^{-i 7 x} + e^{i 5 x} + e^{-i 5 x} \right)
 {{< /katex >}}
-{{< katex display >}}
+> {{< katex display >}}
 = \frac{1}{2} \left( \cos (7x) + \cos (5x) \right)
 {{< /katex >}}
-
-So we've got four coefficients
-
-{{< katex display >}}
+> 
+> So we've got four coefficients
+> 
+> {{< katex display >}}
 c_{\pm 5} = \frac{1}{4}, \qquad c_{\pm 7} = \frac{1}{4}
 {{< /katex >}}
 
-{{< /hint >}}
 
 ### Fourier series with infinite spectra
 
-
-{{< hint info >}}
-
-**Square Wave**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Square Wave**
+> 
+> {{< katex display >}}
 f(x) = \begin{cases} 1 & \qquad & 0 < x < T/2 \\
 -1 & \qquad & -T/2 < x < 0
 \end{cases}
 {{< /katex >}}
-
-This is about as discontinuous as you get. If you do the Fourier integrals, you get
-
-{{< katex display >}}
+> 
+> This is about as discontinuous as you get. If you do the Fourier integrals, you get
+> 
+> {{< katex display >}}
 f(x) = \sum_{n = \text{odd}} \frac{-i}{\pi n} e^{i k_n x}
 {{< /katex >}}
-{{< katex display >}}
+> {{< katex display >}}
 |c_n| \sim \frac{1}{n}
 {{< /katex >}}
-The series has a slow convergence, and if you plot the spectrum you get a power law relationship.
+> The series has a slow convergence, and if you plot the spectrum you get a power law relationship.
 
 
-{{< /hint >}}
-
-
-{{< hint info >}}
-
-**Triangle Wave**
-
-
-The points of the triangle wave where the function is continuous but not differentiable give us a similarly slow convergence of the Fourier spectrum. For a triangle wave it ends up that
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Triangle Wave**
+> 
+> The points of the triangle wave where the function is continuous but not differentiable give us a similarly slow convergence of the Fourier spectrum. For a triangle wave it ends up that
+> 
+> {{< katex display >}}
 | c_n| \sim \frac{1}{n^2}
 {{< /katex >}}
-
-so they converge an order faster than a square wave, but still very slowly.
-
-{{< /hint >}}
+> 
+> so they converge an order faster than a square wave, but still very slowly.
 
 
-{{< hint info >}}
-
-**Elliptic Cosine**
-
-
-Sort of like a cosine, except that it's defined on an ellipse instead of a circle. We give it some parameter \\( m \\) that relates to the ellipticity
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Elliptic Cosine**
+> 
+> 
+> Sort of like a cosine, except that it's defined on an ellipse instead of a circle. We give it some parameter \\( m \\) that relates to the ellipticity
+> 
+> {{< katex display >}}
 f(x) = c_n (x | m)
 {{< /katex >}}
-
-It's periodic, continuous, and infinitely differentiable _but_ its Fourier coefficients behave like
-
-{{< katex display >}}
+> 
+> It's periodic, continuous, and infinitely differentiable _but_ its Fourier coefficients behave like
+> 
+> {{< katex display >}}
 |c_n | \sim \text{sech}(b_n (1 + 2n)) \sim e^{-n}
 {{< /katex >}}
-
-so the spectrum converges _fast_.
-
-{{< /hint >}}
+> 
+> so the spectrum converges _fast_.
 
 
 To summarize, functions with discontinuities and non-differentiable points had Fourier coefficients that decay with a power law. Continuous, differentiable functions converge very fast. A general conclusion is that non-differentiable functions (or functions that are non-smooth at some level) have infinite power law spectra.
@@ -421,44 +408,37 @@ In this case, \\( F(s) \\) has a single pole of degree 2 at \\( s = -1 \\). The 
 Representative of the most important features of the Fourier Transform:
 
 
-{{< hint info >}}
-
-**Gaussian**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Gaussian**
+> 
+> {{< katex display >}}
 f(x) = e^{- \alpha x ^2} \qquad \hat {f} (k) = \frac{1}{\sqrt{2 \alpha}} e ^{- k ^2 / 4 \alpha}
 {{< /katex >}}
+> 
+> Note that if \\( \alpha = 1/2 \\), it is its own transform pair. The Gaussian is one of the only eigenfunctions of the Fourier transform.
 
-Note that if \\( \alpha = 1/2 \\), it is its own transform pair. The Gaussian is one of the only eigenfunctions of the Fourier transform.
-
-{{< /hint >}}
-
-
-
-{{< hint info >}}
-**Derivative**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Derivative**
+> 
+> {{< katex display >}}
 \pdv{^nf}{x^n} \quad \leftrightarrow \quad (i k) ^n \hat{f}(k)
 {{< /katex >}}
+> 
+> In this way, linear differential equations become simple algebraic equations in their Fourier transformed form.
 
-In this way, linear differential equations become simple algebraic equations in their Fourier transformed form.
-
-
-{{< /hint >}}
-
-
-{{< hint info >}}
-**Wave**
-
-The Fourier transform of a single wave component is the Dirac delta function
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Wave**
+> 
+> The Fourier transform of a single wave component is the Dirac delta function
+> 
+> {{< katex display >}}
 f(x) = e^{i k_0 x} \qquad \hat{f}(k) = \sqrt{2 \pi} \delta (k - k_0)
 {{< /katex >}}
 
 
-{{< /hint >}}
 
 ### Unitary Fourier Transform
 
@@ -831,66 +811,55 @@ P(X = x) = f(x)
 
 We can define moments of the probability distribution, which are going to be _very_ important in kinetic theory and in probability theory (and in general).
 
-
-{{< hint info >}}
-
-**0th moment: Normalization**
-
-Probability density functions are required to be normalized to 1. In the discrete case, this amounts to
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **0th moment: Normalization**
+> 
+> Probability density functions are required to be normalized to 1. In the discrete case, this amounts to
+> 
+> {{< katex display >}}
 \sum _{i} P(X = x_i) = 1
 {{< /katex >}}
-
-In the continuous case,
-
-{{< katex display >}}
+> 
+> In the continuous case,
+> 
+> {{< katex display >}}
 \int _{\Omega} f(x) \dd x = 1
 {{< /katex >}}
 
-
-{{< /hint >}}
-
-
-{{< hint info >}}
-**1st moment: Expected value or weighted average**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **1st moment: Expected value or weighted average**
+> 
+> {{< katex display >}}
 \mathbf{E}[X] \equiv \sum_i x_i p_i
 {{< /katex >}}
-
-{{< katex display >}}
+> 
+> {{< katex display >}}
 \langle X \rangle = \sum_{\Omega} x f(x) \dd x
 {{< /katex >}}
 
-{{< /hint >}}
-
-
-{{< hint info >}}
-
-**2nd moment: "Variance" (square of the standard deviation)**
-
-Describes the spread in the outcomes
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **2nd moment: "Variance" (square of the standard deviation)**
+> 
+> Describes the spread in the outcomes
+> 
+> {{< katex display >}}
 \mathbf{V}(X) = \sum_i x_i ^2 p_i
 {{< /katex >}}
-{{< katex display >}}
+> {{< katex display >}}
 \langle X^2 \rangle = \int x^2 f(x) \dd x
 {{< /katex >}}
 
-{{< /hint >}}
-
-
-{{< hint info >}}
-
-**General Nth moment:**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> 
+> **General Nth moment:**
+> 
+> {{< katex display >}}
 \langle X^n \rangle = \int x^n f(x) \dd x
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 ### Law of Large Numbers
