--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -126,20 +126,17 @@ This kind of causality constraint leads to the Kramers-Kronig relations, related
 
 Carrying this convolution integral around is going to make things pretty cumbersome, but we can simplify the picture by working with spectral variables. The convolution theorem helps out a lot here
 
-
-{{< hint info >}}
-
-**Fourier Convolution Theorem:**
-
-Let \\( f(x) \\), \\( g(x) \\) be functions with Fourier transforms \\( \hat f(k) \\), \\( \hat g (k) \\). Then
-
-- The product \\( h(x) = f(x) g(x) \\) has the Fourier transform \\( \hat h (k) = \int _{- \infty} ^\infty \hat f(k - k') \hat g(k') \dd k' \\)
-
-- The product of the spectral transforms \\( \hat m(k) = \hat f(k) \hat g(k) \\) has inverse Fourier transform \\( m(x) = \int _{-\infty} ^\infty f(x - x') g(x') \dd x' \\)
-
-We can summarize by saying that products and convolution are Fourier transform pairs.
-
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Fourier Convolution Theorem:**
+> 
+> Let \\( f(x) \\), \\( g(x) \\) be functions with Fourier transforms \\( \hat f(k) \\), \\( \hat g (k) \\). Then
+> 
+> - The product \\( h(x) = f(x) g(x) \\) has the Fourier transform \\( \hat h (k) = \int _{- \infty} ^\infty \hat f(k - k') \hat g(k') \dd k' \\)
+> 
+> - The product of the spectral transforms \\( \hat m(k) = \hat f(k) \hat g(k) \\) has inverse Fourier transform \\( m(x) = \int _{-\infty} ^\infty f(x - x') g(x') \dd x' \\)
+> 
+> We can summarize by saying that products and convolution are Fourier transform pairs.
 
 
 So, in the spectral variables \\( \hat \vec P(\omega) \\) and \\( \hat \vec E (\omega) \\), the convolution is much simpler:
