--- a/content/notes/UWAA556/ch02-4.md
+++ b/content/notes/UWAA556/ch02-4.md
@@ -63,14 +63,16 @@ When we enter a region of phase space where waves can not exist, we call that bo
 
 The general condition for cut-off \\( (n \rightarrow 0) \\) is
 
-{{< hint info >}}
-**General Condition for Cut-off**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> 
+> **General Condition for Cut-off**
+> 
+> {{< katex display >}}
 C = P R L = 0
 {{< /katex >}}
 
-{{< /hint >}}
+
 
 If a wave enters a region of cut-off we get a decaying amplitude. This physically corresponds with either absorption or reflection.
 
@@ -96,14 +98,14 @@ The range of \\( \omega \\) for which \\( n^2 < 0 \\) is called a band-gap.
 When \\( n^2 \rightarrow \infty \\) we get a resonance. The general condition for resonance is
 
 
-{{< hint info >}}
-**General Condition for Resonance**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **General Condition for Resonance**
+> 
+> {{< katex display >}}
 \tan ^2 \theta = - P / S
 {{< /katex >}}
 
-{{< /hint >}}
 
 For the ordinary plasma wave, this is
 {{< katex display >}}
@@ -317,19 +319,18 @@ This is a much more complicated expression, leading us to the extraordinary wave
 
 ### Ordinary Wave (O-wave)
 
-
-{{< hint info >}}
-**Ordinary Wave**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Ordinary Wave**
+> 
+> {{< katex display >}}
 n_O ^2 = P = 1 - \frac{\omega_{pe}^2}{\omega ^2} - \frac{\omega_{pi}^2}{\omega^2} = 1 - \frac{\omega_p}{\omega ^2}
 {{< /katex >}}
-
-{{< katex display >}}
+> 
+> {{< katex display >}}
 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \frac{\omega_p ^2}{\omega^2} = 0
 {{< /katex >}}
 
-{{< /hint >}}
 
 For \\( \theta = \pi / 2 \\), because \\( \vec E  \\) can be either parallel or perpendicular to the cyclotron orbits, we get hybrid oscillations. First, look at the ordinary plasma wave with \\( \vec E \\) linear polarized in the direction of \\( \vec B \\).
 
@@ -341,15 +342,14 @@ The resonance condition here is \\( v_\phi > c \\), which doesn't happen, so the
 
 ### Extraordinary Wave (X-wave)
 
-
-{{< hint info >}}
-**X-wave**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **X-wave**
+> 
+> {{< katex display >}}
 n_X ^2 = \frac{RL}{S}
 {{< /katex >}}
 
-{{< /hint >}}
 
 
 We can factor the dispersion relation for the X-wave like this:
@@ -754,33 +754,31 @@ Y = \frac{\omega_{ce}}{\omega}
 
 ## Phase and Group Velocities
 
-
-{{< hint info >}}
-
-**Ordinary plasma wave**
-
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Ordinary plasma wave**
+> 
+> 
+> {{< katex display >}}
 v_g = \left. \pdv{\omega}{k} \right|_{k_0}
 {{< /katex >}}
-
-where \\( k_0  \\) is the center of a wave group in space
-
-{{< katex display >}}
+> 
+> where \\( k_0  \\) is the center of a wave group in space
+> 
+> {{< katex display >}}
 v_\phi = \frac{\omega}{k}
 {{< /katex >}}
-
-For the O-waves,
-
-{{< katex display >}}
+> 
+> For the O-waves,
+> 
+> {{< katex display >}}
 n^2 = 1 - \frac{\omega_p ^2}{\omega^2} = \frac{c^2 k^2}{\omega^2}
 {{< /katex >}}
-
-{{< katex display >}}
+> 
+> {{< katex display >}}
 \rightarrow \omega ^2 = \omega_p ^2 + c^2 k^2
 {{< /katex >}}
 
-{{< /hint >}}
 
 In 3 dimensions, the group velocity can be in a different direction than the phase velocity
 
