--- a/content/notes/UWAA556/ch03-1.md
+++ b/content/notes/UWAA556/ch03-1.md
@@ -55,15 +55,13 @@ The distribution function \\( f(\vec x, \vec v, t) \\) needs to satisfy the Bolt
 
 ### Boltzmann Equation
 
-{{< hint info >}}
-
-**Boltzmann Equation**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Boltzmann Equation**
+> 
+> {{< katex display >}}
 \dv{}{t} f(\vec x, \vec v, t) = \pdv{f}{t} + \vec v \cdot \grad f + \frac{\vec F}{m} \cdot \pdv{f}{\vec v} = \left( \dv{f}{t} \right)_C
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 where \\( \vec F / m \\) is simply the time change of velocity itself
