--- a/content/notes/UWAA556/ch03-2.md
+++ b/content/notes/UWAA556/ch03-2.md
@@ -269,16 +269,14 @@ where \\( C_2 \\) is a contour in the lower half-plane that excludes \\( s_1 \\)
 {{< /katex >}}
 
 
-{{< hint info >}}
-
-**Warm Plasma Dispersion Relation**
-
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Warm Plasma Dispersion Relation**
+> 
+> 
+> {{< katex display >}}
 \epsilon(\omega, k) = \underbrace{1 + \frac{\omega_p ^2}{k} \left[ \sout{\int} _{-\infty} ^{\infty} \frac{\partial f_0 / \partial v_x}{\omega - k v_x} \dd v_x \right.}_{\text{Vlasov's solution}} \underbrace{\left. - \frac{i \pi}{k} \left. \pdv{f_0}{v_x} \right|_{v_x = \omega / k} \right]}_{\text{Landau damping}}
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 We can evaluate the integral by parts:
