--- a/content/notes/UWAA556/ch05-1.md
+++ b/content/notes/UWAA556/ch05-1.md
@@ -108,16 +108,13 @@ where we call \\( \mu \equiv \frac{q}{m \nu} \\) the particle mobility and \\( D
 
 If we have uncharged particles, we just get Fick's law for gas particles
 
-
-{{< hint info >}}
-
-**Fick's Law**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Fick's Law**
+> 
+> {{< katex display >}}
 \Gamma = - D \grad n
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 ## Ambipolar Diffusion
@@ -151,15 +148,15 @@ D_a \approx D_i + \frac{\mu_i}{\mu_e} D_e = D_i + \frac{T_e}{T_i} D_i \approx 2 
 {{< /katex >}}
 
 
-{{< hint info >}}
-
-**Ambipolar Diffusion coefficient**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Ambipolar Diffusion coefficient**
+> 
+> {{< katex display >}}
 D_a \approx 2 D_i
 {{< /katex >}}
 
-{{< /hint >}}
+
 
 ## Diffusion in Weakly Ionized, Weakly Magnetized Plasma
 
