--- a/content/notes/UWAA557/ch10-0.md
+++ b/content/notes/UWAA557/ch10-0.md
@@ -11,99 +11,95 @@ weight: 10
 
 Jarboe's 'Rules of Thumb' - basic associations and concepts to keep in mind when working with fusion plasmas
 
-{{< hint info >}}
+> [!NOTE]
+> 
+> **Rule 1**
+> 
+> In event counting measurements the uncertainty in event rate is equal to the square root of the number of events detected. A trade off is made between signal resolution and time resolution
+> 
 
-**Rule 1**
-In event counting measurements the uncertainty in event rate is equal to the square root of the number of events detected. A trade off is made between signal resolution and time resolution
+> [!NOTE]
+> 
+> **Rule 2**
+> 
+> The total E and M force on a volume of plasma can be computed from surface values through \\( \vec F = \int \overline{T} \cdot \vec n \dd V \\)
 
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 2**
-The total E and M force on a volume of plasma can be computed from surface values through \\( \vec F = \int \overline{T} \cdot \vec n \dd V \\)
-{{< /hint >}}
-
-
-{{< hint info >}}
-
-**Rule 3**
-Magnetic field has a tension and isotropic pressure
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Rule 3**
+> 
+> Magnetic field has a tension and isotropic pressure
+> 
+> {{< katex display >}}
 T = \frac{B^2}{\mu_0} \qquad p = \frac{B^2}{2 \mu_0}
 {{< /katex >}}
 
-{{< /hint >}}
-    
+> [!NOTE]
+> 
+> **Rule 4**
+> 
+> Plasma is frozen in the magnetic field when \\( \eta = 0 \\) (zero resistivity). 
 
-
-{{< hint info >}}
-**Rule 4**
-Plasma is frozen in the magnetic field when \\( \eta = 0 \\) (zero resistivity). 
-
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 5**
-
-When \\( \vec{v}_{mag} \\) is the velocity of the magnetic field,
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Rule 5**
+> 
+> When \\( \vec{v}_{mag} \\) is the velocity of the magnetic field,
+> 
+> {{< katex display >}}
 \vec E = - \vec{v}_{mag} \cross \vec B
 {{< /katex >}}
 
-{{< /hint >}}
-    
-{{< hint info >}}
-**Rule 6**
-Ambipolar diffusion requires the ions and electrons to leave the plasma at the same rate
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Rule 6**
+> 
+> Ambipolar diffusion requires the ions and electrons to leave the plasma at the same rate
+> 
+> {{< katex display >}}
 n_{ew} v_{ew} = n_{iw} v_{iw}
 {{< /katex >}}
 
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 7**
-At a given temperature the electron speed is 60 times the D ions requiring a four-e-folding in sheath voltage to make the electron and ion losses equal
-
-{{< katex display >}}
+    
+> [!NOTE]
+> 
+> **Rule 7**
+> 
+> At a given temperature the electron speed is 60 times the D ions requiring a four-e-folding in sheath voltage to make the electron and ion losses equal
+> 
+> {{< katex display >}}
 V_{sheath} \approx 4 T_e
 {{< /katex >}}
 
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 8**
-
-The energy of the ions into the wall is:
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Rule 8**
+> 
+> The energy of the ions into the wall is:
+> 
+> {{< katex display >}}
 W_{impact} \approx 4 Z_i k T_e + \frac{1}{2} k T_i
 {{< /katex >}}
 
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Rule 9**
+> 
+> A Langmuir probe can measure \\( T_e \\) \\( T_i \\) and \\( n \\). The probe perturbs the plasma and is good for unmagnetized plasma of \\( T \\) less than \\( 50 eV \\) and \\( n \\) less than \\( 10^{20} m^{-3} \\) . The probe is used for velocity in magnetized plasma where \\( v \cross B \\) often dominates \\( E \\).
 
-{{< hint info >}}
-**Rule 9**
+> [!NOTE]
+> 
+> **Rule 10**
+> 
+> Particles interact within a Debye sphere. Outside \\( \lambda_D \\) distance particles do not see each other due to shielding.
 
-A Langmuir probe can measure \\( T_e \\) \\( T_i \\) and \\( n \\). The probe perturbs the plasma and is good for unmagnetized plasma of \\( T \\) less than \\( 50 eV \\) and \\( n \\) less than \\( 10^{20} m^{-3} \\) . The probe is used for velocity in magnetized plasma where \\( v \cross B \\) often dominates \\( E \\).
-
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 10**
-Particles interact within a Debye sphere. Outside \\( \lambda_D \\) distance particles do not see each other due to shielding.
-
-{{< /hint >}}
-
-{{< hint info >}}
-**Rule 11**
-Four collision frequencies
-- \\( \nu_{ei} \\) - Electron momentum loss rate on ions. Used in resistivity.
-- \\( \nu_{ee} \\) Electron energy exchange rate with electrons. In other words, if you do something to the electrons this is how long it will take to get back to Maxwellian. Same order as \\( \nu_{ei} \\) 
-- \\( \nu_{ii} \\) Ion energy exchange rate with ions
-- \\( \nu_{ie} \\) Electron energy exchange rate between electrons and ions. It's about the same as ions slowing down in electrons: \\( \approx \frac{m_e}{m_i} \nu_{ee} \\). For fusion to work, need confinement times longer than this time.
-
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Rule 11**
+> 
+> Four collision frequencies
+> - \\( \nu_{ei} \\) - Electron momentum loss rate on ions. Used in resistivity.
+> - \\( \nu_{ee} \\) Electron energy exchange rate with electrons. In other words, if you do something to the electrons this is how long it will take to get back to Maxwellian. Same order as \\( \nu_{ei} \\) 
+> - \\( \nu_{ii} \\) Ion energy exchange rate with ions
+> - \\( \nu_{ie} \\) Electron energy exchange rate between electrons and ions. It's about the same as ions slowing down in electrons: \\( \approx \frac{m_e}{m_i} \nu_{ee} \\). For fusion to work, need confinement times longer than this time.
+>
