--- a/content/notes/UWAA557/ch10-1.md
+++ b/content/notes/UWAA557/ch10-1.md
@@ -263,31 +263,33 @@ Putting in our constraints, out pops the Maxwell-Boltzmann distribution
 f(\vec v) \dd \vec v = n \left( \frac{m}{2 \pi k T} \right) ^{3/2} e^{- \epsilon / kT} \qquad \epsilon = \text{ KE + PE }
 {{< /katex >}}
 
-{{< hint info >}}
-**Example: Distribution under Gravity**
 
-If we have a bunch of particles under the influence of gravity, the energy is
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> 
+> **Example: Distribution under Gravity**
+> 
+> If we have a bunch of particles under the influence of gravity, the energy is
+> 
+> {{< katex display >}}
 \epsilon = \frac{1}{2} m v^2 + mgz
 {{< /katex >}}
-
-The distribution is
-
-{{< katex display >}}
+> 
+> The distribution is
+> 
+> {{< katex display >}}
 f(v) = n_0 \left( \frac{m}{2 \pi k T} \right) ^{3/2} e^{-( \frac{1}{2} m v^2 + mgz)/kT}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 = n(z) \left( \frac{m}{2 \pi k T} \right) ^{3/2} e^{-\frac{1}{2} m v^2 / kT}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 n(z) = n_0 e^{- mgz / kT}
 {{< /katex >}}
-
-In a collisionless picture, the velocity spread is the same at all heights (\\( kT \\) is not a function of z). However lower energy particles do not make it to a higher z. We end up with a density drop with increasing \\( z \\) .
-
-{{< /hint >}}
+> 
+> In a collisionless picture, the velocity spread is the same at all heights (\\( kT \\) is not a function of z). However lower energy particles do not make it to a higher z. We end up with a density drop with increasing \\( z \\) .
+>
