--- a/content/notes/griffiths/ch1-2.md
+++ b/content/notes/griffiths/ch1-2.md
@@ -1,5 +1,5 @@
 ---
-title: Differential Calculus
+title: (1.2) Differential Calculus
 weight: 20
 ---
 
@@ -52,16 +52,15 @@ _Geometrical interpretation of the Gradient_: Like any vector, the gradient has 
 
 where \\( \theta \\) is the angle between \\( \grad{T} \\) and \\( \dd{\vec{l}} \\). Now if we fix the magnitude \\( |\dd{\vec{l}}| \\) and search around in various directions, the maximum change in T evidently occurs when \\( \theta = 0 \\) (for then \\( \cos \theta = 1 \\)). That is, for a fixed distance, dT is greatest when I move in the same direction as \\( \grad{T} \\) . Thus:
 
-{{< hint info >}}
-**The gradient \\( \grad{T} \\) points in the direction of maximum increase of the function T.**
-{{< /hint >}}
+> [!NOTE]
+> **The gradient \\( \grad{T} \\) points in the direction of maximum increase of the function T.**
+> 
 
 Moreover:
 
-{{< hint info >}}
-**The magnitude \\( | \grad{T} | \\) gives the slope (rate of increase) along this maximal direction**
-{{< /hint >}}
-
+> [!NOTE]
+> **The magnitude \\( | \grad{T} | \\) gives the slope (rate of increase) along this maximal direction**
+> 
 
 Imagine you are standing on a hillside. Look all around you, and find the direction of steepest ascent. That is the direction of the gradient. Now measure the slope in that direction (rise over run). That is the magnitude of the gradient. (Here the function we're talking about is the height of the hill, and the coordinates it depends on are positions-latitude and longitude, say. This function depends on only two variables, not three, but the geometrical meaning of the gradient is easier to grasp in two dimensions.) Notice from Eq. 1.37 that the direction of maximum descent is opposite to the direction of maximum ascent, while at right angles \\( (\theta = 90^{\circ}) \\) the slope is zero (the gradient is perpendicular to the contour lines). You can conceive of surfaces that do not have these properties, but they always have "kinks" in them, and correspond to non-differentiable functions.
 
