--- a/content/notes/griffiths/ch1-3.md
+++ b/content/notes/griffiths/ch1-3.md
@@ -1,5 +1,5 @@
 ---
-title: Integral Calculus
+title: (1.3) Integral Calculus
 weight: 30
 ---
 
@@ -244,13 +244,14 @@ _Geometrical Interpretation:_ Suppose you wanted to determine the height of the 
 
 Incidentally, as we found in Ex. 1.6, line integrals ordinarily depend on the path taken from a to b. But the right side of Eq. 1.55 makes no reference to the path - only to the end points. Evidently, gradients have the special property that their line integrals are path independent:
 
-{{< hint info >}}
-**__Corollary 1:__ \\( \int_a ^b (\grad T) \cdot \dd \vec{l} \\) is independent of the path taken from a to b.**
-{{< /hint >}}
+> [!NOTE]
+> 
+> **__Corollary 1:__ \\( \int_a ^b (\grad T) \cdot \dd \vec{l} \\) is independent of the path taken from a to b.**
 
-{{< hint info >}}
-**__Corollary 2:__ \\( \oint (\grad T) \cdot \dd \vec{l} = 0 \\), since the beginning and end points are identical, and hence \\( T(\vec{b}) - T(\vec{a}) = 0 \\).**
-{{< /hint >}}
+> [!NOTE]
+> 
+> **__Corollary 2:__ \\( \oint (\grad T) \cdot \dd \vec{l} = 0 \\), since the beginning and end points are identical, and hence \\( T(\vec{b}) - T(\vec{a}) = 0 \\).**
+
 
 #### Example 1.9
 
@@ -409,13 +410,13 @@ You may have noticed an apparent ambiguity in Stokes' theorem: concerning the bo
 
 Now, there are plenty of surfaces (infinitely many) that share any given boundary line. Twist a paper clip into a loop, and dip it in soapy water. The soap film constitutes a surface, with the wire loop as its boundary. If you blow on it, the soap film will expand, making a larger surface, with the same boundary. Ordinarily, a flux integral depends critically on what surface you integrate over, but evidently this is not the case with curls. For Stokes' theorem says that \\( \int (\curl \vec{v}) \cdot \dd \vec{a} \\)  is equal to the line integral of \\( \vec{v}\ \\)  around the boundary, and the latter makes no reference to the specific surface you choose.
 
-{{< hint info >}}
-**Corollary 1: \\( \int (\curl \vec{v}) \cdot \dd \vec{a} \\) depends only on the boundary line, not on the particular surface used.**
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Corollary 1: \\( \int (\curl \vec{v}) \cdot \dd \vec{a} \\) depends only on the boundary line, not on the particular surface used.**
 
-{{< hint info >}}
-**Corollary 2: \\( \oint (\curl \vec{v}) \cdot \dd \vec{a} = 0 \\) for any closed surface, since the boundary line, like the mouth of a balloon, shrinks down to a point, and hence the right side of \\( \eqref{1.57} \\) vanishes.**
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Corollary 2: \\( \oint (\curl \vec{v}) \cdot \dd \vec{a} = 0 \\) for any closed surface, since the boundary line, like the mouth of a balloon, shrinks down to a point, and hence the right side of \\( \eqref{1.57} \\) vanishes.**
 
 #### Example 1.11
 
