--- a/content/notes/griffiths/ch1-6.md
+++ b/content/notes/griffiths/ch1-6.md
@@ -1,5 +1,5 @@
 ---
-title: The Theory of Vector Fields
+title: (1.6) The Theory of Vector Fields
 weight: 60
 ---
 
@@ -35,30 +35,29 @@ If the curl of a vector field (__F__) vanishes (everywhere), then __F__ can be w
 
 (The minus sign is purely conventional.) That's the essential burden of the following theorem:
 
-{{< hint info >}}
-**__Theorem 1__. Curl-less (or 'irrotational') fields. The following conditions are equivalent (that is, __F__ satisfies one if and only if it satisfies all the others):**
-
-    
-{{< katex display >}}
+> [!NOTE]
+> 
+> **__Theorem 1__. Curl-less (or 'irrotational') fields. The following conditions are equivalent (that is, __F__ satisfies one if and only if it satisfies all the others):**
+> 
+>     
+> {{< katex display >}}
 \tag{a} \curl \vec{F} = 0 \text{ everywhere }
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{b} \int_a ^b \vec{F} \cdot \dd \vec{l} \text{ is independent of path, for any given end points}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{c} \oint \vec{F} \cdot \dd \vec{l} = 0 \text{ for any closed loop}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{d} \vec{F} \text{ is the gradient of some scalar function: } \vec{F} = - \grad V
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 The potential is not unique, and any constant can be added to V with impunity, since this will not affect its gradient. 
@@ -71,29 +70,28 @@ If the divergence of a vector field (__F__) vanishes (everywhere), then __F__ ca
 
 That's the main conclusion of the following theorem:
 
-{{< hint info >}}
-**__Theorem 2__. Divergence-less (or 'solenoidal') fields. The following conditions are equivalent:**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Theorem 2: Divergence-less (or 'solenoidal') fields. The following conditions are equivalent:**
+> 
+> {{< katex display >}}
 \tag{a} \div \vec{F} = 0 \text{ everywhere}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{b} \int \vec{F} \cdot \dd \vec{a} \text{ is independent of surface, for any given boundary line}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{c} \oint \vec{F} \cdot \dd \vec{a} = 0 \text{ for any closed surface.}
 {{< /katex >}}
-
-
-{{< katex display >}}
+> 
+> 
+> {{< katex display >}}
 \tag{d} \vec{F} \text{ is the curl of some vector function: } \vec{F} = \curl \vec{A}
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 The vector potential is not unique - the gradient of any scalar function can be added to __A__ without affecting the curl, since the curl of a gradient is zero.
