--- a/content/notes/griffiths/ch10-3.md
+++ b/content/notes/griffiths/ch10-3.md
@@ -1,5 +1,5 @@
 ---
-title: Point Charges
+title: (10.3) Point Charges
 weight: 1030
 ---
 
@@ -37,42 +37,40 @@ is not equal to the charge of the particle, and depends on the location of the p
 \int \rho ( \vec r ', t_r) \dd \tau' = \frac{q}{1 - \vu \gr \cdot \vec v / c}
 {{< /katex >}}
 
-{{< hint info >}}
-**Theorem:** \\( \int \rho ( \vec r \', t_r) \dd \tau\' = \frac{q}{1 - \vu \gr \cdot \vec v / c} \\)
-
-This is a purely geometrical effect, and it may help to tell the story in a less abstract context. You will not have noticed it, for obvious reasons, the the fact is that a train coming towards you looks a little longer than it really is, because the light you receive from the caboose left earlier than the light you receive simultaneously from the engine, and at that earlier time the train was farther away (Fig 10.6). In the interval it takes light from the caboose to travel the extra distance \\( L' \\), the train itself moves a distance \\( L' - L \\)
-
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Theorem:** \\( \int \rho ( \vec r \', t_r) \dd \tau\' = \frac{q}{1 - \vu \gr \cdot \vec v / c} \\)
+> 
+> This is a purely geometrical effect, and it may help to tell the story in a less abstract context. You will not have noticed it, for obvious reasons, the the fact is that a train coming towards you looks a little longer than it really is, because the light you receive from the caboose left earlier than the light you receive simultaneously from the engine, and at that earlier time the train was farther away (Fig 10.6). In the interval it takes light from the caboose to travel the extra distance \\( L' \\), the train itself moves a distance \\( L' - L \\)
+> 
+> 
+> {{< katex display >}}
 \frac{L'}{c} = \frac{L' - L}{v} \quad \text{or} \quad L' = \frac{L}{1-v/c} 
 {{< /katex >}}
-
-
-<p align="center"> <img alt="Figure 10.6" src="/r/img/griffiths/10.6.png" /> </p>
-
-So approaching trains appear longer, by a factor \\( (1 - v/c)^{-1} \\). By contrast, a train going away from you looks shorter, by a factor \\( (1 + v/c)^{-1} \\). In general, if the train's velocity makes an angle \\( \theta \\) with your line of sight, the extra distance light from the caboose must cover is \\( L' \cos \theta \\). In the time \\( L' \cos \theta / c \\), then, the train moves a distance \\( (L' - L) \\)
-
-{{< katex display >}}
+> 
+> 
+> <p align="center"> <img alt="Figure 10.6" src="/r/img/griffiths/10.6.png" /> </p>
+> 
+> So approaching trains appear longer, by a factor \\( (1 - v/c)^{-1} \\). By contrast, a train going away from you looks shorter, by a factor \\( (1 + v/c)^{-1} \\). In general, if the train's velocity makes an angle \\( \theta \\) with your line of sight, the extra distance light from the caboose must cover is \\( L' \cos \theta \\). In the time \\( L' \cos \theta / c \\), then, the train moves a distance \\( (L' - L) \\)
+> 
+> {{< katex display >}}
 \frac{L' \cos \theta}{c} = \frac{L' - L}{v} \quad \text{or} \quad L' = \frac{L}{1 - v \cos \theta / c} 
 {{< /katex >}}
-
-
-Since the effect does not distort the dimensions perpendicular to the motion, we can easily move to 3D as
-
-{{< katex display >}}
+> 
+> 
+> Since the effect does not distort the dimensions perpendicular to the motion, we can easily move to 3D as
+> 
+> {{< katex display >}}
 L' = \frac{l}{1 - \vu \gr \cdot \vec v / c} 
 {{< /katex >}}
-
-and the apparent volume of the train \\( \tau' \\) of the train is then related to the actual volume by
-
-{{< katex display >}}
+> 
+> and the apparent volume of the train \\( \tau' \\) of the train is then related to the actual volume by
+> 
+> {{< katex display >}}
 \tau' = \frac{\tau}{1 - \vu \gr \cdot \vec v / c} 
 {{< /katex >}}
-
-where \\( \vu \gr \\) is a unit vector from the train to the observer.
-
-
-{{< /hint >}}
+> 
+> where \\( \vu \gr \\) is a unit vector from the train to the observer.
 
 
 Back to our moving point charge, the retarded time is determined implicitly by
