--- a/content/notes/griffiths/ch2-2.md
+++ b/content/notes/griffiths/ch2-2.md
@@ -1,5 +1,5 @@
 ---
-title: Divergence and Curl of Electrostatic Fields
+title: (2.2) Divergence and Curl of Electrostatic Fields
 weight: 220
 ---
 
