--- a/content/notes/griffiths/ch3-3.md
+++ b/content/notes/griffiths/ch3-3.md
@@ -1,5 +1,5 @@
 ---
-title: Separation of Variables
+title: (3.3) Separation of Variables
 weight: 330
 ---
 
@@ -459,11 +459,11 @@ P_l(x) \equiv \frac{1}{2^l l!}\left( \dv{}{x} \right)^l (x^2 - 1)^l \tagl{3.62}
 
 The first few Legendre polynomials are listed:
 
-
-{{< hint info >}}
-**Legendre Polynomials \\( P_0 \\) -  \\(P_5 \\)**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Legendre Polynomials \\( P_0 \\) -  \\(P_5 \\)**
+> 
+> {{< katex display >}}
 \begin{aligned}
 P_0(x) & = 1 \\
 P_1(x) & = x \\
@@ -473,8 +473,6 @@ P_4(x) & = (35x^4 - 30x^2 + 3)/8 \\
 P_5(x) & = (63x^5 - 70x^3 + 15x)/8
 \end{aligned}
 {{< /katex >}}
-
-{{< /hint >}}
 
 Notice that \\( P_l(x) \\) is (as the name suggests) an _l_-th-order polynomial in x; it contains only even powers if l is even, and only odd powers if l is odd. The factor in front \\( (1/2^l l! ) \\) was chosen in order that
 
