--- a/content/notes/griffiths/ch5-1.md
+++ b/content/notes/griffiths/ch5-1.md
@@ -1,5 +1,5 @@
 ---
-title: The Lorentz Force Law
+title: (5.1) The Lorentz Force Law
 weight: 510
 ---
 
@@ -158,28 +158,27 @@ The particle moves as though it were a spot on the rim of a wheel rolling along 
 
 #### Example 5.2b: Mass Spectrometer
 
-{{< hint info >}}
-**Mass Spectrometer**
-
-Suppose we have particles of several isotopes of a known element, and we wish to know exactly which mass isotopes are present (and separate them out) A mass spectrometer is an instrument which can measure the masses and relative concentrations of atoms and molecules. It makes use of the basic magnetic force on a moving charged particle. First, we ionize the particle, giving it a known net charge. We accelerate the particles through a known voltage into a constant magnetic field perpendicular to the velocity of the particle. The charged particles now undergo cyclotron motion (as we just described) of radius given by
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Mass Spectrometer**
+> 
+> Suppose we have particles of several isotopes of a known element, and we wish to know exactly which mass isotopes are present (and separate them out) A mass spectrometer is an instrument which can measure the masses and relative concentrations of atoms and molecules. It makes use of the basic magnetic force on a moving charged particle. First, we ionize the particle, giving it a known net charge. We accelerate the particles through a known voltage into a constant magnetic field perpendicular to the velocity of the particle. The charged particles now undergo cyclotron motion (as we just described) of radius given by
+> 
+> {{< katex display >}}
 m v = q B R \rightarrow v^2 = \frac{q^2 B^2 R^2}{m^2} 
 {{< /katex >}}
-
-We know that the energy per unit charge imparted by our known voltage difference is
-
-{{< katex display >}}
+> 
+> We know that the energy per unit charge imparted by our known voltage difference is
+> 
+> {{< katex display >}}
 q | \Delta V| = \frac{1}{2} m v^2 \rightarrow v^2 = \frac{2 q | \Delta V|}{m} 
 {{< /katex >}}
-
-We can measure the radius of the cyclotron motion by simply putting a detector wall 1/2 of the way around the circular motion, such that the ions will strike the detector a distance \\( 2R \\) from the output nozzle of the accelerating voltage. Putting our known quantities (\\( \Delta V, B )\\) together with the measured radius of the cyclotron motion, we get
-
-{{< katex display >}}
+> 
+> We can measure the radius of the cyclotron motion by simply putting a detector wall 1/2 of the way around the circular motion, such that the ions will strike the detector a distance \\( 2R \\) from the output nozzle of the accelerating voltage. Putting our known quantities (\\( \Delta V, B )\\) together with the measured radius of the cyclotron motion, we get
+> 
+> {{< katex display >}}
 \frac{m}{q} = \frac{B^2 R^2}{2 | \Delta V|} 
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 One implication of the Lorentz force law deserves special attention:
