--- a/content/notes/griffiths/ch7-1.md
+++ b/content/notes/griffiths/ch7-1.md
@@ -1,5 +1,5 @@
 ---
-title: Electromotive Force
+title: (7.1) Electromotive Force
 weight: 710
 ---
 
@@ -288,65 +288,63 @@ This is the __flux rule__ for motional emf.
 
 Apart from its delightful simplicity, the flux rule has the virtue of applying to non-rectangular loops moving in arbitrary directions through nonuniform magnetic fields; in fact, the loop need not even maintain a fixed shape.
 
-{{< hint info >}}
-
-Proof. Figure 7.13 shows a loop of wire at time \\( t \\) , and also a short time \\( \dd t \\) later. Suppose we compute the flux at time \\( t \\) , using surface \\( S \\) , and the flux at time \\( t + \dd t \\) , using the surface consisting of \\( S \\)  plus the "ribbon" that connects the new position of the loop to the old. The change in flux, then, is
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> Proof. Figure 7.13 shows a loop of wire at time \\( t \\) , and also a short time \\( \dd t \\) later. Suppose we compute the flux at time \\( t \\) , using surface \\( S \\) , and the flux at time \\( t + \dd t \\) , using the surface consisting of \\( S \\)  plus the "ribbon" that connects the new position of the loop to the old. The change in flux, then, is
+> 
+> {{< katex display >}}
 \dd \Phi = \Phi(t + \dd t) - \Phi(t) = \Phi_{ribbon} = \int_{ribbon} \vec{B} \cdot \dd \vec{a}
 {{< /katex >}}
-
-<p align="center"> <img alt="Figure 7.13" src="/r/img/griffiths/7.13.png" /> </p>
-Focus your attention on point \\( P \\): in time \\( \dd t \\) it moves to \\( P' \\). Let \\( \vec{v} \\) be the velocity of the wire, and \\( \vec{u} \\) the velocity of a charge down the wire; \\( \vec{w} = \vec{v} + \vec{u} \\) is the resultant velocity of a charge at \\( P \\). The infinitesimal element of area on the ribbon can be written as
-
-{{< katex display >}}
+> 
+> <p align="center"> <img alt="Figure 7.13" src="/r/img/griffiths/7.13.png" /> </p>
+> Focus your attention on point \\( P \\): in time \\( \dd t \\) it moves to \\( P' \\). Let \\( \vec{v} \\) be the velocity of the wire, and \\( \vec{u} \\) the velocity of a charge down the wire; \\( \vec{w} = \vec{v} + \vec{u} \\) is the resultant velocity of a charge at \\( P \\). The infinitesimal element of area on the ribbon can be written as
+> 
+> {{< katex display >}}
 \dd \vec{a} = ( \vec{v} \cross \dd \vec{l} ) \dd t
 {{< /katex >}}
-
-(see inset in Fig 7.13). Therefore
-
-{{< katex display >}}
+> 
+> (see inset in Fig 7.13). Therefore
+> 
+> {{< katex display >}}
 \dv{\Phi}{t} = \oint \vec{B} \cdot ( \vec{v} \cross \dd \vec{l})
 {{< /katex >}}
-
-Since \\( \vec{w} = ( \vec{v} + \vec{u}) \\) and \\( \vec{u} \\) is parallel to \\( \dd \vec{l} \\), we can just as well write
-
-{{< katex display >}}
+> 
+> Since \\( \vec{w} = ( \vec{v} + \vec{u}) \\) and \\( \vec{u} \\) is parallel to \\( \dd \vec{l} \\), we can just as well write
+> 
+> {{< katex display >}}
 \dv{\Phi}{t} = \oint \vec{B} \cdot ( \vec{w} \cross \dd \vec{l})
 {{< /katex >}}
-
-Now, the scalar triple product can be rewritten:
-
-{{< katex display >}}
+> 
+> Now, the scalar triple product can be rewritten:
+> 
+> {{< katex display >}}
 \vec{B} \cdot ( \vec{w} \cross \dd \vec{l}) = - ( \vec{w} \cross \vec{B}) \cdot \dd \vec{l}
 {{< /katex >}}
-
-so
-
-{{< katex display >}}
+> 
+> so
+> 
+> {{< katex display >}}
 \dv{\Phi}{t} = - \oint ( \vec{w} \cross \vec{B}) \cdot \dd \vec{l}
 {{< /katex >}}
-
-But \\( (\vec{w} \cross \vec{B}) \\) is the magnetic force per unit charge, \\( \vec{f}_{mag} \\), so
-
-{{< katex display >}}
+> 
+> But \\( (\vec{w} \cross \vec{B}) \\) is the magnetic force per unit charge, \\( \vec{f}_{mag} \\), so
+> 
+> {{< katex display >}}
 \dv{\Phi}{t} = - \oint \vec{f}_{mag} \cdot \dd \vec{l}
 {{< /katex >}}
-
-and the integral of \\( \vec{f}_{mag} \\) is the emf:
-
-{{< katex display >}}
+> 
+> and the integral of \\( \vec{f}_{mag} \\) is the emf:
+> 
+> {{< katex display >}}
 \mathcal{E} = - \dv{\Phi}{t}
 {{< /katex >}}
-
-
-There is a sign ambiguity in the definition of emf (Eq. 7.9): Which way around the loop are you supposed to integrate? There is a compensatory ambiguity in the definition of flux (Eq. 7.12): Which is the positive direction for \\( \dd \vec{a} \\) ? In applying the flux rule, sign consistency is governed (as always) by your right hand: If your fingers define the positive direction around the loop, then your thumb indicates the direction of \\( \dd \vec{a} \\). Should the emf come out negative, it means the current will flow in in the negative direction around the circuit.
-
-<p align="center"> <img alt="Figure 7.14" src="/r/img/griffiths/7.14.png" /> </p>
-
-The flux rule is a nifty short-cut for calculating motional emfs. It does not contain any new physics - just the Lorentz force law. But it can lead to error or ambiguity if you're not careful. The flux rule assumes you have a single wire loop - it can move, rotate, stretch, or distort (continuously), but beware of switches, sliding contacts, or extended conductors allowing a variety of current paths. A standard "flux rule paradox" involves the circuit in Figure 7.14. When the switch is thrown (from a to b) the flux through the circuit doubles, but there's no motional emf (no conductor moving through a magnetic field), and the ammeter (A) records no current.
-
-{{< /hint >}}
+> 
+> 
+> There is a sign ambiguity in the definition of emf (Eq. 7.9): Which way around the loop are you supposed to integrate? There is a compensatory ambiguity in the definition of flux (Eq. 7.12): Which is the positive direction for \\( \dd \vec{a} \\) ? In applying the flux rule, sign consistency is governed (as always) by your right hand: If your fingers define the positive direction around the loop, then your thumb indicates the direction of \\( \dd \vec{a} \\). Should the emf come out negative, it means the current will flow in in the negative direction around the circuit.
+> 
+> <p align="center"> <img alt="Figure 7.14" src="/r/img/griffiths/7.14.png" /> </p>
+> 
+> The flux rule is a nifty short-cut for calculating motional emfs. It does not contain any new physics - just the Lorentz force law. But it can lead to error or ambiguity if you're not careful. The flux rule assumes you have a single wire loop - it can move, rotate, stretch, or distort (continuously), but beware of switches, sliding contacts, or extended conductors allowing a variety of current paths. A standard "flux rule paradox" involves the circuit in Figure 7.14. When the switch is thrown (from a to b) the flux through the circuit doubles, but there's no motional emf (no conductor moving through a magnetic field), and the ammeter (A) records no current.
     
 
 #### Example 7.4
@@ -382,5 +380,3 @@ Example 7.4 (the __Faraday disk__, or __Faraday dynamo__) involves a motional em
 Even more tricky is the case of eddy currents. Take a chunk of aluminum (say), and shake it around in a nonuniform magnetic field. Currents will be generated in the material, and you will feel a kind of "viscous drag" - as though you were pulling the block through molasses (this is the force I called \\( \vec{f}_{pull} \\)  in the discussion of motional emf). Eddy currents are notoriously difficult to calculate, but easy and dramatic to demonstrate. You may have witnessed the classic experiment in which an aluminum disk mounted as a pendulum on a horizontal axis swings down and passes between the poles of a magnet (Fig. 7.16a). When it enters the field region it suddenly slows way down. To confirm that eddy currents are responsible, one repeats the demonstration using a disk that has many slots cut in it, to prevent the flow of large-scale currents (Fig. 7.16b). This time the disk swings freely, unimpeded by the field.
 
 <p align="center"> <img alt="Figure 7.16" src="/r/img/griffiths/7.16.png" /> </p>
-
- 
