--- a/content/notes/griffiths/ch7-2.md
+++ b/content/notes/griffiths/ch7-2.md
@@ -1,5 +1,5 @@
 ---
-title: Electromagnetic Induction
+title: (7.2) Electromagnetic Induction
 weight: 720
 ---
 
@@ -56,17 +56,15 @@ Note that Faraday's law reduces to the old rule \\( \oint \vec{E} \cdot \dd \vec
 
 In Experiment 3, the magnetic field changes for entirely different reasons, but according to Faraday's law an electric field will again be induced, giving rise to an emf \\( - d \Phi / dt \\). Indeed, one can subsume all three cases (and for that matter any combination of them) into a kind of __universal flux rule__:
 
-{{< hint info >}}
-
-Whenever (and for whatever reason) the magnetic flux through a loop changes, an emf 
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> Whenever (and for whatever reason) the magnetic flux through a loop changes, an emf 
+> 
+> {{< katex display >}}
 \mathcal{E} = - \pdv{\Phi}{t} \tagl{7.17}
 {{< /katex >}}
-
-will appear in the loop.
-
-{{< /hint >}}
+> 
+> will appear in the loop.
 
 Many people call this "Faraday's law." Maybe I'm overly fastidious, but I find this confusing. There are really two totally different mechanisms underlying Eq. 7.17, and to identify them both as "Faraday's law" is a little like saying that because identical twins look alike we ought to call them by the same name. In Faraday's first experiment, it's the Lorentz force law at work; the emf is magnetic. But in the other two it's an electric field (induced by the changing magnetic field) that does the job. Viewed in this light, it is quite astonishing that all three processes yield the same formula for the emf. In fact, it was precisely this "coincidence" that led Einstein to the special theory of relativity - he sought a deeper understanding of what is, in classical electrodynamics, a peculiar accident. But that's a story for chapter 12. In the meantime, I shall reserve the term "Faraday's law" for electric fields induced by changing magnetic fields, and I do not regard Experiment 1 as an instance of Faraday's law.
 
@@ -92,9 +90,9 @@ The magnetic field is the same as that of a long solenoid with surface current \
 
 Keeping track of the signs in Faraday's law can be a real headache. For instance, in Ex. 7.5 we would like to know which way around the ring the induced current flows. In principle, the right-hand rule does the job (we called \\( \Phi \\)  positive to the left, in Fig. 7.22, so the positive direction for current in the ring is counter-clockwise, as viewed from the left; since the first spike in Fig. 7.23b is negative, the first current pulse flows clockwise, and the second counterclockwise). But there's a handy rule, called Lenz's law, whose sole purpose is to help you get the directions right:
 
-{{< hint info >}}
-**Nature abhors a change in flux**
-{{< /hint >}}
+> [!NOTE]
+> 
+> **Nature abhors a change in flux**
 
 The induced current will flow in such a direction that the flux it produces tends to cancel the change. (As the front end of the magnet in Ex. 7.5 enters the ring, the flux increases, so the current in the ring must generate a field to the right - it therefore flows clockwise.) Notice that it is the change in flux, not the flux itself, that nature abhors (when the tail end of the magnet exits the ring, the flux drops, so the induced current flows counterclockwise, in an effort to restore it). Faraday induction is a kind of "inertial" phenomenon: A conducting loop "likes" to maintain a constant flux through it; if you try to change the flux, the loop responds by sending a current around in such a direction as to frustrate your efforts. (It doesn't succeed completely; the flux produced by the induced current is typically only a tiny fraction of the original. All Lenz's law tells you is the direction of the flow.)
 
@@ -212,7 +210,8 @@ and the angular momentum imparted to the wheel is
 
 It doesn't matter how quickly or slowly you tum off the field; the resulting angular velocity of the wheel is the same regardless. (If you find yourself wondering where the angular momentum came from, you're getting ahead of the story! Wait for the next chapter.)
 
-Note that it's the electric field that did the rotating. To convince you of this, I deliberately set things up so that the magnetic field is zero at the location of the charge. The experimenter may tell you she never put in any electric field - all she did was switch off the magnetic field. But when she did that, an electric field automatically appeared, and it's this electric field that turned the wheel.
+Note that it's the electric field that did the rotating. To convince you of this, I deliberately set t
+gs up so that the magnetic field is zero at the location of the charge. The experimenter may tell you she never put in any electric field - all she did was switch off the magnetic field. But when she did that, an electric field automatically appeared, and it's this electric field that turned the wheel.
 
 
 {{% /tab %}}
@@ -586,5 +585,3 @@ This method of calculating the self-inductance is especially useful when the cur
 
 {{% /tab %}}
 {{< /tabs >}}
-
-
