--- a/content/notes/griffiths/ch7-3.md
+++ b/content/notes/griffiths/ch7-3.md
@@ -1,5 +1,5 @@
 ---
-title: Maxwell's Equations
+title: (7.3) Maxwell's Equations
 weight: 730
 ---
 
@@ -134,10 +134,11 @@ exactly cancels the conduction current (in Eq. 7.37), and the magnetic field (de
 
 In the last section we put the finishing touches on Maxwell's equations:
 
-{{< hint info >}}
-**Maxwell's Equations**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Maxwell's Equations**
+> 
+> {{< katex display >}}
 \begin{aligned}
 (\text{i}) & \quad \div \vec{E} = \frac{1}{\epsilon_0 } \rho \quad \text{(Gauss's law)} \\
 (\text{ii}) & \quad \div \vec{B} = 0 \quad \text{(Ng's Law)} \\
@@ -145,8 +146,6 @@ In the last section we put the finishing touches on Maxwell's equations:
 (\text{iv}) & \quad \curl \vec{B} = \mu_0 \vec{J} + \mu_0 \epsilon_0 \pdv{\vec{E}}{t} \quad \text{(Ampere's Law)}
 \end{aligned} \tagl{7.40}
 {{< /katex >}}
-
-{{< /hint >}}
 
 Together, with the force law,
 
@@ -314,10 +313,11 @@ Faraday's law and \\( \div \vec{B} = 0 \\) are not affected by our separation of
 
 In terms of free charges and currents, then, Maxwell's equations read
 
-{{< hint info >}}
-**Maxwell's Equations in Matter**
-
-{{< katex display >}}
+> [!NOTE]
+> 
+> **Maxwell's Equations in Matter**
+> 
+> {{< katex display >}}
 \begin{aligned}
 (\text{i}) & \quad \div \vec{D} = \rho_f \quad \text{(Gauss's law)} \\
 (\text{ii}) & \quad \div \vec{B} = 0 \quad \text{(Ng's Law)} \\
@@ -325,8 +325,6 @@ In terms of free charges and currents, then, Maxwell's equations read
 (\text{iv}) & \quad \curl \vec{H} = \vec{J}_f + \pdv{\vec{D}}{t} \quad \text{(Ampere's Law)}
 \end{aligned}  \tagl{7.56} 
 {{< /katex >}}
-
-{{< /hint >}}
 
 
 Some people regard these as the "true" Maxwell's equations, but please understand that they are in no way more "general" than Eq. 7.40; they simply reflect a convenient division of charge and current into free and nonfree parts. And they have the disadvantage of hybrid notation, since they contain both \\( \vec{E} \\)  and \\( \vec{D} \\) , both \\( \vec{B} \\)  and \\( \vec{H} \\) . They must be supplemented, therefore, by appropriate __constitutive relations__, giving \\( \vec{D} \\)  and \\( \vec{H} \\)  in terms of \\( \vec{E} \\)  and \\( \vec{B} \\) . These depend on the nature of the material; for linear media
